# learning

./: .gitignore  users-sqlalchemy.db  users-sqlite.db
data-science/: .env.example  000-use-environment-variables.md  Azure-python-big-database.md  Learning_1.ipynb  Learning_2.ipynb  Learning_3.ipynb  MS Access connection.md  Notebook_4.ipynb  Pandas.ipynb  SQL-learning-resources.md  SQLAlchemy-unused-text.md  Untitled.ipynb  azure-db-linux.md  azure-db.md  data-science-environment.md  docker-size.sh  hrdp-my-windows.ipynb  orca.py  orca2.py  orca3.py  pandas-data-from-database.md  pandoc-cmd.bat  post.py  post2.py  pull.py  sqlalchemy-minimum.md  track_table.xlsx
docker/: course-notes.txt
learning-docker/: course-notes.txt  install-docker.sh
pelican-static-site/: add-custom-domain-to-cloudflare-pages.md  create-a-static-site-with-pelican.md  host-static-web-site.md  readme.md  writing-drafts.md
python/dbproject/: .gitignore  README.md  db_excercises.ipynb  pyproject.toml  requirements.txt  userdata.db  userdata.db-journal
python/dbproject/dbapp/: __main__.py
python/dbproject/dbapp/database/: connect.py  functions.py  models.py
python/dbproject/dbapp/dbsetup/: database.py  models.py
python/dbproject/dbapp/interface/: cli-docopt.py  cli.py  db.py  text_cmd.py  text_ui.py
python/dbproject/docs/: dotenv-example  post.md
python/dbproject/src/dbapp/: __main__.py  app.py  config.py
python/dbproject/src/dbapp/database/: connect.py  functions.py  models.py
python/dbproject/src/dbapp/interface/: cli-docopt.py  cli.py  functions.py  text_ui.py
(+81 files in other folders)
